<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/insertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertName"/>

    <EditText
        android:id="@+id/mapListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/insertAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/insertAddress"
            android:textSize="8sp" />

        <Button
            android:id="@+id/uploadExcel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/uploadExcel"
            android:textSize="8sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/save"
            android:textSize="8sp" />

        <Button
            android:id="@+id/makePriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:text="@string/makePriority"
            android:textSize="8sp" />
    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/insertAddress"
        android:id="@+id/map_id"/>

</LinearLayout>
